WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
235238
Unable to playback portrait videos on HTML canvas elements
https://bugs.webkit.org/show_bug.cgi?id=235238
Summary
Unable to playback portrait videos on HTML canvas elements
Peng Liu
Reported
2022-01-14 10:25:43 PST
Unable to playback portrait videos on HTML canvas elements
Attachments
Patch
(3.44 KB, patch)
2022-01-14 10:34 PST
,
Peng Liu
no flags
Details
Formatted Diff
Diff
Update change log based on Jer's suggestion
(3.61 KB, patch)
2022-01-14 11:05 PST
,
Peng Liu
no flags
Details
Formatted Diff
Diff
Update change log based on Jer's suggestion
(3.61 KB, patch)
2022-01-14 11:06 PST
,
Peng Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Peng Liu
Comment 1
2022-01-14 10:34:23 PST
Created
attachment 449183
[details]
Patch
Peng Liu
Comment 2
2022-01-14 10:35:10 PST
<
rdar://85760433
>
Peng Liu
Comment 3
2022-01-14 11:05:20 PST
Created
attachment 449187
[details]
Update change log based on Jer's suggestion
Peng Liu
Comment 4
2022-01-14 11:06:47 PST
Created
attachment 449188
[details]
Update change log based on Jer's suggestion
EWS
Comment 5
2022-01-14 23:31:09 PST
Committed
r288053
(
246073@main
): <
https://commits.webkit.org/246073@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 449188
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug